--- a/codelabs/gifted-trout/index.html
+++ b/codelabs/gifted-trout/index.html
@@ -14,6 +14,7 @@
   </head>  
   <body>
     <h1>Hi there!</h1>
+    <h2>How's it going?</h2>
     
     <p>
       I'm your cool new webpage. Made with <a href="https://glitch.com">Glitch</a>!
