Change multiple files.

--- a/codelabs/knowing-mascara/index.html
+++ b/codelabs/knowing-mascara/index.html
@@ -13,7 +13,7 @@
     <script src="/script.js" defer></script>
   </head>  
   <body>
-    <h1>Yo yo yo!</h1>
+    <h1>Three, four</h1>
     
     <p>
       I'm your cool new webpage. Made with <a href="https://glitch.com">Glitch</a>!
