--- a/codelabs/gifted-trout/index.html
+++ b/codelabs/gifted-trout/index.html
@@ -13,7 +13,7 @@
     <script src="/script.js" defer></script>
   </head>  
   <body>
-    <h1>Hi there!</h1>
+    <h1>One, two</h1>
     <h2>How's it going?</h2>
     
     <p>
